# mini_ahrs_driver

./: CMakeLists.txt  compile_commands.json
examples/: read_from_ahrs.cpp
include/: MiniAHRSDriver.h  config.h
include/mini_ahrs_driver/: MiniAHRSDriver.h  MiniAHRSPacket.h
src/: MiniAHRSDriver.cpp
